--- a/templates/add_doctor.html
+++ b/templates/add_doctor.html
@@ -7,10 +7,18 @@
 <body>
   <h2>Add New Doctor</h2>
   <form method="POST">
+      <label>Username:</label>
+      <input type="text" name="username" required><br>
+      
+      <label>Password:</label>
+      <input type="password" name="password" required><br>
+      
       <label>Name:</label>
       <input type="text" name="name" required><br>
+
       <label>Specialization:</label>
       <input type="text" name="specialization" required><br>
+
       <button type="submit">Add Doctor</button>
   </form>
   <a href="/admin/doctors">Back</a>
