--- a/templates/dashboard_admin.html
+++ b/templates/dashboard_admin.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <h2>Welcome Admin</h2>
-    <p>Admin dashboard</p>
+    <h1>Welcome, Admin!</h1>
 
     <ul>
         <li><a href="{{ url_for('manage_patients') }}">Manage Patients</a></li>
-        <li><a href="{{ url_for('add_patient') }}">Add New Patient</a></li>
-        <li><a href="{{ url_for('manage_doctors') }}">Manage Doctors</a></li>
-        <li><a href="{{ url_for('add_doctor') }}">Add New Doctor</a></li>
-    </ul>
+        <li><a href="{{ url_for('add_patient') }}">Add Patient</a></li>
 
-    <a href="{{ url_for('logout') }}">Logout</a>
+        <li><a href="{{ url_for('manage_doctors') }}">Manage Doctors</a></li>
+        <li><a href="{{ url_for('add_doctor') }}">Add Doctor</a></li>
+
+        <li><a href="{{ url_for('manage_appointments') }}">Manage Appointments</a></li>
+        <li><a href="{{ url_for('add_appointment') }}">Add Appointment</a></li>
+
+        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+    </ul>
 </body>
 </html>
